# api-rust-rinha

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  init.sql  nginx.conf
.cargo/: config.toml
src/: config.rs  controller.rs  error.rs  main.rs
