[package]
name = "rust-api-rinha-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = "0.9.1"
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dev-dependencies]
anyhow = "1"
